--- a/css/app.css
+++ b/css/app.css
@@ -1,4 +1,103 @@
-body { font-family: 'Alegreya Sans', sans-serif;}
+/*body, h1,h2,h3,h4,h5,h6, p, li, .top-bar-section ul li > a {font-family: 'lato', sans-serif;}
 
+@media only screen and (min-width: 648px) {
+	.top-bar {
+		background: rgba(255,255,255,0.5);
+		border-bottom:1px solid #CCC;
+		line-height: 80px;
+		height: 80px;
+		}
+	.logo > a > img {height: 60px;}
+	.top-bar-section ul li > a {
+		background: rgba(255,255,255,0.5);
+		color:#777777;
+		text-transform: uppercase;
+		font-size: .9rem;
+		font-weight: bold;
+	}
+	.top-bar-section ul li {background: rgba(255,255,255,0.5);}
+	.top-bar-section li:not(.has-form) a:not(.button) {
+		background: rgba(255,255,255,0.5);
+		line-height: 79px;
+		padding: 0 15px;
+	}
+	.top-bar-section .has-form {
+		background: rgba(255,255,255,0.5);
+		height: 79px;
+		padding: 0 15px;
+	}
 
-.top-bar { background: #fff; }
+	.top-bar-section li:not(.has-form) a:not(.button):hover {
+		color: #7bbdd8;
+		background-color: #FFF;
+	}
+	.top-bar-section ul li > a.button {
+		font-size: .9rem;
+		padding-right: 15px;
+		padding-left: 15px;
+		background: rgba(255,255,255,0.5);
+		border: 3px solid;
+		border-color: #7bbdd8;
+		color: #7bbdd8;
+		margin-top: 15px;
+	}
+	.top-bar-section ul li > a.button:hover {
+		background: #7bbdd8;
+	}
+
+	nav.top-bar {
+		text-align:center;
+	}
+	section.top-bar-section {
+		display: inline-block;
+	}
+}
+
+@media only screen and (min-width: 992px) {
+	.logo > a > img {height: 125px;}
+	.top-bar {
+		line-height: 160px;
+		height: 160px;
+		}
+
+	.top-bar-section ul li > a {
+		font-size: 1.3rem;
+	}
+	.top-bar-section ul li {background: rgba(255,255,255,0.5);}
+	.top-bar-section li:not(.has-form) a:not(.button) {
+		background: rgba(255,255,255,0.5);
+		line-height: 159px;
+		padding: 0 20px;
+	}
+	.top-bar-section .has-form {
+		background: rgba(255,255,255,0.5);
+		height: 159px;
+		padding: 0 20px;
+	}
+
+	.top-bar-section li:not(.has-form) a:not(.button):hover {
+		color: #7bbdd8;
+		background-color: #FFF;
+	}
+	.top-bar-section ul li > a.button {
+		font-size: 1.5rem;
+		padding-right: 15px;
+		padding-left: 15px;
+		background: rgba(255,255,255,0.5);
+		border: 3px solid;
+		border-color: #7bbdd8;
+		color: #7bbdd8;
+		margin-top: 50px;
+	}
+	.top-bar-section ul li > a.button:hover {
+		background: #7bbdd8;
+	}
+
+	nav.top-bar {
+		text-align:center;
+	}
+	section.top-bar-section {
+		display: inline-block;
+	}
+
+}
